[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Scripts/AI/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/stand1.png" type="Texture" id=2]
[ext_resource path="res://src/Scripts/PlayerSprite.gd" type="Script" id=4]
[ext_resource path="res://src/GUI/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Entities/Misc/CameraEntity.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/player/crouch1.png" type="Texture" id=9]
[ext_resource path="res://assets/weapons/sword_cc0.png" type="Texture" id=11]
[ext_resource path="res://src/Scripts/AI/PlayerWeapon.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "crouch_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "damage_protection"
length = 0.25
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.254902, 0.254902, 0.254902, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.792157, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "damage_protection", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=7]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Weapon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, -16 ), Vector2( 64, 48 ), Vector2( 40, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Weapon:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -14.5, 88.0991, -14.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_attack"
}, {
"args": [  ],
"method": "end_attack"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Weapon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 36 ), Vector2( -28, -20 ), Vector2( 40, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Weapon:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 71.5508, 107.555, -14.5 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
script = ExtResource( 4 )

[node name="Weapon" type="Area2D" parent="Sprite"]
position = Vector2( 40, -16 )
rotation = -0.253073
collision_layer = 32
collision_mask = 12
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Sprite/Weapon"]
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Weapon"]
polygon = PoolVector2Array( -48, 28, -36, 52, 56, -40, 36, -56 )

[node name="CollisionNormal" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -33.8342, 80.0527, 21.3959, 80.1577, 38.1389, 12.3273, 21.4909, -34.5674, 20.69, -71.6727, -15.1838, -71.339, -23.2804, -34.4632, -34.001, -17.6269 )

[node name="CollisionCrouch" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -33.3098, 80.2199, -33.0851, 32.1622, -15, 3.625, 20.7438, 3.61516, 37.8386, 39.9315, 37.8976, 48.8983, 21.4909, 79.8664 )
disabled = true

[node name="Camera" parent="." instance=ExtResource( 6 )]
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15

[node name="GUI" parent="Camera" instance=ExtResource( 5 )]

[node name="UpRayCast" type="RayCast2D" parent="."]
position = Vector2( -36.1972, -0.315002 )
cast_to = Vector2( 0, -77 )
collision_mask = 6

[node name="UpRayCast2" type="RayCast2D" parent="."]
position = Vector2( 33.8028, -0.315002 )
cast_to = Vector2( 0, -77 )
collision_mask = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage_protection = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/respawn = SubResource( 7 )
anims/teleport = SubResource( 8 )

[node name="WeaponAnims" type="AnimationPlayer" parent="."]
anims/attack_forward = SubResource( 9 )
anims/raise = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]
